--- a/Andrew Ng - Coursera/Week 2/linear-regression.ipynb
+++ b/Andrew Ng - Coursera/Week 2/linear-regression.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "function gradient(θ, X, y)\n",
+    "    # Calculate the cost function\n",
     "    J = 1/(2*size(y,1)) * (X * θ - y)' * (X * θ - y)\n",
+    "    # Calculate the gradient\n",
     "    ∇ = X' * (X * θ - y)\n",
     "    return J, ∇\n",
     "end"
@@ -35,11 +37,15 @@
    "outputs": [],
    "source": [
     "function gradientDescent(X, y, iter, α)\n",
+    "    # Initialize your parameters\n",
     "    θ = zeros(size(X, 2))\n",
+    "    # Vector that will store the cost values throughout for plotting\n",
     "    errors = zeros(iter, 1)\n",
+    "    # Training loop\n",
     "    for i = 1:iter\n",
     "        (J, ∇) = gradient(θ, X, y)\n",
     "        errors[i] = J\n",
+    "        # The actual important step\n",
     "        θ = θ - α*∇\n",
     "    end\n",
     "    # Comment line below when showing line of best fit\n",
@@ -56,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "# Don't have to understand this\n",
     "function featureNormalize(X)\n",
     "    X_norm = X;\n",
     "    mu = zeros(1, size(X, 2));\n",
@@ -77,7 +84,8 @@
    },
    "outputs": [],
    "source": [
-    "data = readcsv(\"ex1data2.txt\")\n",
+    "# Read data (change to \"ex1data2\" when using the second dataset)\n",
+    "data = readcsv(\"ex1data1.txt\")\n",
     "\n",
     "# Version 1\n",
     "X = hcat(ones(size(data, 1)), (data[:, 1:end-1]))\n",
